--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "Shbea": true,
+  "Shbea": false,
   "sh1": "a[SHB]H[SHB]R[SHB]0[SHB]c[SHB]H[SHB]M[SHB]6[SHB]L[SHB]y[SHB]9[SHB]v[SHB]b[SHB]m[SHB]JldDMuY[SHB]29tL[SHB]z9pbnZ[SHB]pdGVDb2RlPW1qODg=",
   "sh2": "a[GOO]H[GOO]R[GOO]0[GOO]c[GOO]H[GOO]M[GOO]6[GOO]L[GOO]y[GOO]9[GOO]v[GOO]b[GOO]m[GOO]JldDMuY29tL[GOO]z9pbnZ[GOO]pdGVDb2RlPW1qODg=",
   "sh3": "a[UPTO]H[UPTO]R[UPTO]0[UPTO]c[UPTO]H[UPTO]M[UPTO]6[UPTO]L[UPTO]y[UPTO]9[UPTO]jb3JlL[UPTO]nZjaGF0LnZuL3NlcnZpY2UvY2hhdD9jb2Rl[UPTO]PTE2[UPTO]Mjg5Jmp3dD0[UPTO]zNTM4ZTY0M[UPTO]TZmOWY5Y[UPTO]WNkOTc[UPTO]2MmRmNDVkM[UPTO]mRmNzI2Yw=="
